--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- navbar starts -->
     <nav id="navbar-top" class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container-fluid px-5">
-            <a class="navbar-brand fw-bold fs-2" href="#" style="color: #3f396d">Portfolio</a>
+            <a class="navbar-brand fw-bold fs-2" href="#" style="color: #3f396d">Artificial intelligence</a>
             <button class="nav-menu d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <i class="bi bi-menu-button-fill"></i>
             </button>
