--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
 
 
     <!-- home section ends here -->
-
     <!-- expertise section starts -->
     <section class="expertise mt-5" id="product">
         <div class="heading text-center">
@@ -112,7 +111,6 @@
                             We specialize in cutting-edge Generative AI solutions that transform your business with
                             intelligent automation, data analysis, and personalized user experiences.
                         </p>
-
                     </div>
                 </div>
             </div>
@@ -139,7 +137,7 @@
                         <img src="images/service-icon3.png" class="w-25 img-fluid img" alt="Hosting & Chatbot" />
                     </div>
                     <div class="content mt-3">
-                        <h4>Hosting & AI Chatbot Integration</h4>
+                        <h4>Agentic & LLMs Chatbot Integration</h4>
                         <p class="text-muted">
                             We offer reliable hosting services and seamless integration of AI chatbots, enhancing
                             customer interaction and automating support functions with AI-driven technology.
