--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                             <i class="bi bi-geo-alt-fill"></i>
                         </div>
                         <div class="col-11">
-                            <p>121 Udhyog Vihar, Phase-v, Gurugram, Haryana 122002</p>
+                            <p>297, Udyog Vihar Industrial Area Phase VI, Sector 37, Gurugram, Haryana 122001(we are moving towards 100% remote.)</p>
                         </div>
                     </div>
                     <div class="row justify-content-evenly">
@@ -564,7 +564,7 @@
             </div>
             <hr class="text-muted my-4" />
 
-            <p>Copyright 2025 Yantra World | All Rights Reserved.</p>
+            <p>Copyright 2025 yantraworld.in | All Rights Reserved.</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
