--- a/index.html
+++ b/index.html
@@ -479,14 +479,14 @@
                             <p>297, Udyog Vihar Industrial Area Phase VI, Sector 37, Gurugram, Haryana 122001(we are moving towards 100% remote.)</p>
                         </div>
                     </div>
-                    <div class="row justify-content-evenly">
+                    <!-- <div class="row justify-content-evenly">
                         <div class="col-1">
                             <i class="bi bi-telephone-fill"></i>
                         </div>
                         <div class="col-11">
                             <p>+91 8368459014</p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row justify-content-evenly">
                         <div class="col-1">
                             <i class="bi bi-send-fill"></i>
